--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,15 +17,31 @@
         style="@style/Theme.AppCompat.Light.DarkActionBar"
         app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+
+
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        >
 
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/feedListView"
+                android:layout_gravity="center_horizontal|top"
+                android:headerDividersEnabled="false"
+                android:dividerHeight="1dp"
+                android:divider="#FFFFFF"
+                android:padding="20dp"
+                android:stackFromBottom="false" />
+        </FrameLayout>
 
         <ListView
             android:id="@+id/drawerList"
