--- a/app/src/main/res/layout/todo_row.xml
+++ b/app/src/main/res/layout/todo_row.xml
@@ -8,7 +8,8 @@
         android:layout_height="wrap_content"
         android:text="New CheckBox"
         android:id="@+id/checkBox"
-        android:textSize="14dp" />
+        android:textSize="14dp"
+        android:onClick="checkBoxClick" />
 
     <TextView
         android:layout_width="match_parent"
