--- a/app/src/main/res/layout/expense_row.xml
+++ b/app/src/main/res/layout/expense_row.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/expenseRowTemplate"
-    android:background="#006699"
+    android:background="#FFFFFF"
     android:paddingRight="10dp">
 
     <TextView
@@ -12,15 +12,13 @@
         android:layout_height="40dp"
         android:text="@string/expense_name_text"
         android:id="@+id/expenseNameText"
-        android:textColor="#FFFFFF"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:paddingLeft="30dp"
         android:paddingTop="5dp"
         android:paddingRight="5dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignLeft="@+id/dueDateText"
+        android:layout_alignStart="@+id/dueDateText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,32 +30,44 @@
         android:paddingBottom="5dp"
         android:singleLine="false"
         android:textStyle="bold"
-        android:layout_alignTop="@+id/expenseAmountText"
-        android:layout_alignParentStart="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:textSize="16sp"
+        android:layout_below="@+id/expenseNameText"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:textSize="16dp"
-        android:layout_marginTop="5dp"
-        android:textColor="#FFFFFF" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/expense_amount_text"
         android:id="@+id/expenseAmountText"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:layout_gravity="right"
         android:textColor="@android:color/holo_green_dark"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="15dp"
-        android:layout_below="@+id/expenseNameText"
         android:textAlignment="gravity"
         android:gravity="center"
         android:padding="5dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
+        android:layout_alignBottom="@+id/expenseNameText"
+        android:layout_alignRight="@+id/authorText"
+        android:layout_alignEnd="@+id/authorText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Divided Amount"
+        android:id="@+id/dividedAmountText"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_gravity="right"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textAlignment="gravity"
+        android:gravity="center"
+        android:padding="5dp"
+        android:layout_alignTop="@+id/dueDateText"
+        android:layout_alignRight="@+id/authorText"
+        android:layout_alignEnd="@+id/authorText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,32 +77,26 @@
         android:id="@+id/authorText"
         android:layout_gravity="right"
         android:paddingRight="15dp"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:layout_below="@+id/dueDateText"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:paddingTop="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginLeft="5dp"
-        android:textColor="#FFFFFF" />
+        android:layout_marginLeft="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/expense_description_text"
         android:id="@+id/expenseNotesText"
-        android:layout_below="@+id/authorText"
-        android:layout_alignStart="@+id/dueDateText"
-        android:layout_alignLeft="@+id/dueDateText"
-        android:layout_toStartOf="@+id/authorText"
-        android:layout_toLeftOf="@+id/authorText"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:layout_alignEnd="@+id/expenseAmountText"
-        android:layout_alignRight="@+id/expenseAmountText"
-        android:textSize="16dp"
-        android:layout_marginTop="5dp"
-        android:textColor="#FFFFFF" />
+        android:textSize="16sp"
+        android:textStyle="italic"
+        android:layout_below="@+id/expenseStatusText"
+        android:layout_alignLeft="@+id/expenseStatusText"
+        android:layout_alignStart="@+id/expenseStatusText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -102,11 +106,10 @@
         android:id="@+id/expenseStatusText"
         android:layout_gravity="right"
         android:paddingRight="15dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:paddingTop="10dp"
         android:layout_below="@+id/dueDateText"
-        android:layout_alignStart="@+id/dueDateText"
         android:layout_alignLeft="@+id/dueDateText"
-        android:textColor="#FFFFFF" />
+        android:layout_alignStart="@+id/dueDateText" />
 
 </RelativeLayout>
