Expense Activity - Ability to Edit Expenses

--- a/app/src/main/res/values/menu_options_array.xml
+++ b/app/src/main/res/values/menu_options_array.xml
@@ -3,5 +3,6 @@
     <string-array name="menu_options_array">
         <item>Edit</item>
         <item>Delete</item>
+        <item>Mark as Paid/Not Paid</item>
     </string-array>
 </resources>
