--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ExpenseActivity"
     android:id="@+id/expense_layout"
-    android:background="#FFFFFFFF">
+    android:background="#006699">
 
     <Button
         android:layout_width="wrap_content"
