--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#006699">
 
     <TextView
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:paddingRight="5dp"
-        android:textColor="#ff000000" />
+        android:textColor="#FFFFFFFF" />
 
     <TextView
         android:layout_width="match_parent"
@@ -27,7 +28,8 @@
         android:layout_weight="0.04"
         android:textSize="10dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp" />
+        android:paddingRight="5dp"
+        android:textColor="#FFFFFFFF" />
 
     <TextView
         android:layout_width="match_parent"
@@ -39,5 +41,5 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingBottom="5dp"
-        android:textColor="#ff000000" />
+        android:textColor="#FFFFFFFF" />
 </LinearLayout>
