--- a/app/src/main/res/layout/todo_row.xml
+++ b/app/src/main/res/layout/todo_row.xml
@@ -9,7 +9,8 @@
         android:text="New CheckBox"
         android:id="@+id/checkBox"
         android:textSize="14dp"
-        android:onClick="checkBoxClick" />
+        android:onClick="checkBoxClick"
+        android:textColor="#FFFFFFFF" />
 
     <TextView
         android:layout_width="match_parent"
@@ -17,5 +18,6 @@
         android:text="New Text"
         android:id="@+id/authorText"
         android:paddingLeft="40dp"
-        android:textSize="10dp" />
+        android:textSize="10dp"
+        android:textColor="#FFFFFFFF" />
 </LinearLayout>
